# curl-rust

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  appveyor.yml  azure-pipelines.yml  build.rs  clippy  crates.js  foo.rs  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: main.yml
ci/: Dockerfile-alma8  Dockerfile-centos7  Dockerfile-linux32  Dockerfile-linux64  Dockerfile-linux64-curl  Dockerfile-mingw  Dockerfile-musl  azure-install-rust.yml  azure-steps.yml  install-cmake.sh  run.sh
curl/: all.html  fn.init.html  index.html  sidebar-items.js  struct.Error.html  struct.FormError.html  struct.MultiError.html  struct.Protocols.html  struct.ShareError.html  struct.Version.html
curl-sys/: Cargo.toml  build.rs  lib.rs  multi.rs
curl-sys/include/: README.md
curl-sys/include/mesalink/mesalink/: options.h  version.h
curl/easy/: enum.HttpVersion.html  enum.InfoType.html  enum.IpResolve.html  enum.NetRc.html  enum.ProxyType.html  enum.ReadError.html  enum.SeekResult.html  enum.SslVersion.html  enum.TimeCondition.html  enum.WriteError.html  index.html  sidebar-items.js  struct.Auth.html  struct.Easy.html  struct.Easy2.html  struct.Form.html  struct.Iter.html  struct.List.html  struct.Part.html  struct.PostRedirections.html  struct.SslOpt.html  struct.Transfer.html  trait.Handler.html
curl/easy/form/: struct.Form.html  struct.Part.html
curl/easy/handle/: struct.Easy.html  struct.Transfer.html
curl/easy/handler/: enum.HttpVersion.html  enum.InfoType.html  enum.IpResolve.html  enum.NetRc.html  enum.ProxyType.html  enum.ReadError.html  enum.SeekResult.html  enum.SslVersion.html  enum.TimeCondition.html  enum.WriteError.html  struct.Auth.html  struct.Easy2.html  struct.PostRedirections.html  struct.SslOpt.html  trait.Handler.html
curl/easy/list/: struct.Iter.html  struct.List.html
curl/error/: struct.Error.html  struct.FormError.html  struct.MultiError.html  struct.ShareError.html
curl/multi/: index.html  sidebar-items.js  struct.Easy2Handle.html  struct.EasyHandle.html  struct.Events.html  struct.Message.html  struct.Multi.html  struct.MultiWaker.html  struct.SocketEvents.html  struct.WaitFd.html  type.Socket.html
curl/version/: struct.Protocols.html  struct.Version.html
examples/: aws_sigv4.rs  doh.rs  file_download.rs  file_download_upload.rs  http3.rs  https.rs  multi-dl.rs  ssl_cert_blob.rs  ssl_client_auth.rs  ssl_proxy.rs  windowsdns.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
search.desc/curl/: curl-desc-0-.js
search.index/: 0000623f95f0.js  00a8aa0da634.js  00ccdfa396e1.js  00ef612c22f5.js  0150f44b5c94.js  01e855f91246.js  0222886e9750.js  02537c15a4b2.js  027f0ea3f0fc.js  036051be6644.js  03d0417668a2.js  043783bf78c8.js  053b552bb39e.js  05bdefe34bad.js  05e32cc54b86.js  065ad823d787.js  067d8c67ec95.js  06b2b13190ae.js  070939b7b334.js  07a82a63bb28.js  0811bd238ca9.js  08b8237b866c.js  08e861b77f37.js  08fd3d67b085.js  098052c1e194.js  0a308034955c.js  0b88ec5939a3.js  0baea81258b2.js  0bc7e3cccfbf.js  0be2ae3e8f62.js  0c29dd29d19a.js  0c8024e7fe3b.js  0ca3878181cb.js  0ca755d53459.js  0cdaf5f2d264.js  0d03914d2c63.js  0db2d0e5d459.js  0f59e3fabe21.js  0fb5d98d4b6a.js  1007df1d298d.js  (+207 more)
search.index/crateNames/: ec043b19c945.js
search.index/desc/: 33258666157c.js  9a990c9cb941.js
search.index/entry/: 8419a45c22b3.js  863f858c25ce.js  94ba60ae69ad.js  968d11b883e9.js
search.index/function/: 54d0c6b48451.js  ab0c9205755e.js  bd942f5a9356.js
search.index/generic_inverted_index/: 6b71b7f1cc9c.js  eba205be0c69.js  fbe7ce58f198.js
search.index/name/: 6aaf837a788f.js  6c0b69145c29.js  f948344f1a37.js
search.index/normalizedName/: 3c1774284cd5.js  d78811001255.js  fe10d9fde0c7.js
search.index/path/: 4669e423236e.js  9714f7e30ed3.js  af065d033947.js
search.index/type/: 435129e0eac2.js  75ec265a7cb9.js  aa2e6f3deadd.js
src/: body.rs  easy.rs  error.rs  handle.rs  header.rs  lib.rs  main.rs  mime.rs  multi.rs  panic.rs  response.rs  url.rs  version.rs
src/curl/: error.rs.html  lib.rs.html  multi.rs.html  panic.rs.html  version.rs.html
src/curl/easy/: form.rs.html  handle.rs.html  handler.rs.html  list.rs.html  mod.rs.html  windows.rs.html
src/easy/: context.rs  form.rs  handle.rs  handler.rs  list.rs  mime.rs  mod.rs  windows.rs
src/ffi/: consts.rs  easy.rs  err.rs  info.rs  list.rs  mod.rs  multi.rs  multi_err.rs  multi_opt.rs  opt.rs  version.rs
src/http/: body.rs  handle.rs  header.rs  mod.rs  multi_handle.rs  response.rs
src/mime/: handler.rs
src/test/: delete.rs  get.rs  head.rs  keep_alive.rs  mod.rs  patch.rs  post.rs  proxy.rs  put.rs  server.rs  simple.rs
src/url/: error.rs  get_flags.rs  handle.rs  set_flags.rs
systest/: Cargo.toml  build.rs  version_detect.c
systest/src/: main.rs
test/: server.rs  test.rs  test_delete.rs  test_get.rs  test_head.rs  test_keep_alive.rs  test_patch.rs  test_post.rs  test_proxy.rs  test_put.rs
tests/: atexit.rs  easy.rs  mime.rs  multi.rs  post.rs  protocols.rs  zlib.rs
tests/server/: mod.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/ops/drop/: trait.Drop.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
type.impl/curl_sys/: type.curl_socket_t.js
(+4 files in other folders)
