[package]
name = "curl"
version = "0.4.22"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT"
repository = "https://github.com/alexcrichton/curl-rust"
homepage = "https://github.com/alexcrichton/curl-rust"
documentation = "https://docs.rs/curl"
description = "Rust bindings to libcurl for making HTTP requests"
categories = ["api-bindings", "web-programming::http-client"]
autotests = true

[badges]
travis-ci = { repository = "alexcrichton/curl-rust" }
appveyor = { repository = "alexcrichton/curl-rust" }

[dependencies]
libc = "0.2.42"
curl-sys = { path = "curl-sys", version = "0.4.18", default-features = false }
socket2 = "0.3.7"

# Unix platforms use OpenSSL for now to provide SSL functionality
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
openssl-sys = { version = "0.9.43", optional = true }
openssl-probe = { version = "0.1.2", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = "0.2.7"

[target.'cfg(target_env = "msvc")'.dependencies]
schannel = "0.1.13"
kernel32-sys = "0.2.2"

[dev-dependencies]
mio = "0.6"
mio-extras = "2.0.3"

[workspace]
members = ["systest"]

[features]
default = ["ssl"]
ssl = ["openssl-sys", "openssl-probe", "curl-sys/ssl"]
http2 = ["curl-sys/http2"]
static-curl = ["curl-sys/static-curl"]
static-ssl = ["curl-sys/static-ssl"]
force-system-lib-on-osx = ['curl-sys/force-system-lib-on-osx']

[[test]]
name = "atexit"
harness = false
