[package]
name = "curl-sys"
version = "0.4.20"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
links = "curl"
build = "build.rs"
license = "MIT"
repository = "https://github.com/alexcrichton/curl-rust"
description = "Native bindings to the libcurl library"
documentation = "https://docs.rs/curl-sys"
categories = ["external-ffi-bindings"]

[badges]
travis-ci = { repository = "alexcrichton/curl-rust" }
appveyor = { repository = "alexcrichton/curl-rust" }

[lib]
name = "curl_sys"
path = "lib.rs"

[dependencies]
libz-sys = "1.0.18"
libc = "0.2.2"
libnghttp2-sys = { optional = true, version = "0.1" }

[dependencies.mesalink]
path = "mesalink"
optional = true

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
openssl-sys = { version = "0.9", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "ws2def"] }

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"

[build-dependencies]
pkg-config = "0.3.3"
cc = "1.0"

[features]
default = ["ssl"]
ssl = ["openssl"] # OpenSSL by default
openssl = ["openssl-sys"] # OpenSSL TLS backend
http2 = ["libnghttp2-sys"]
static-curl = []
static-ssl = ["openssl-sys/vendored"]
spnego = []
force-system-lib-on-osx = []
